--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -17,10 +17,10 @@
     "\n",
     "The workflow was following:\n",
     "\n",
-    "Gather data for all routes using SQL.\n",
-    "Develop a Machine Learning model based on labelled data using Python.\n",
-    "Categorize all routes using the developed model and provide results to the operational team as a csv file.\n",
-    "Incorporate the results in existing Power BI reporting and refresh the model/re-apply lane cateogires every 3 month.\n",
+    "1. Gather data for all routes using SQL.\n",
+    "2. Develop a Machine Learning model based on labelled data using Python.\n",
+    "3. Categorize all routes using the developed model and provide results to the operational team as a csv file.\n",
+    "4. Incorporate the results in existing Power BI reporting and refresh the model/re-apply lane cateogires every 3 month.\n",
     "Note: the data used in the repository is made-up to avoid sharing corporate data. It is based on a real-life business case, so the approach can be applied to any business that is facing the same challenge."
    ]
   },
